--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Rotaract Club of GITAM - Index</title>
+  <title>Rotaract Club of GITAM</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/pp.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -50,7 +50,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><span>Delicious</span></a></h1>
+        <h3 class="text-light"><a href="index.html"><span>Rotaract Club of GITAM</span></a></h3>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -66,7 +66,7 @@
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact</a></li>
 
-          <li class="book-a-table text-center"><a href="#book-a-table">Book a table</a></li>
+          <li class="book-a-table text-center"><a href="#book-a-table">Join Rotaract</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -227,7 +227,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2><span>Avenues</span></h2>
+          <h1><span>Avenues</span></h1>
         </div>
 
         <!-- <div class="row">
@@ -245,56 +245,56 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="community.html"><h3>Community services</h3></a>
+              <a href="community.html"><h2>Community services</h2></a>
             </div>
-            <div class="menu-ingredients">
+            <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="professional.html"><h3>Professional services</h3></a>
+              <a href="professional.html"><h2>Professional services</h2></a>
             </div>
-            <div class="menu-ingredients">
+            <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="clubservices.html"><h3>Club services</h3></a>
+              <a href="clubservices.html"><h2>Club services</h2></a>
             </div>
-            <div class="menu-ingredients">
+            <!-- <div class="menu-ingredients">
               A delicate crab cake served on a toasted roll with lettuce and tartar sauce
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="youth.html"><h3>Youth services/ New Generation</h3></a>
+              <a href="youth.html"><h2>Youth services/ New Generation</h2></a>
             </div>
-            <div class="menu-ingredients">
+            <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="teach.html"><h3>Rotary TEACH</h3></a>
+              <a href="teach.html"><h2>Rotary TEACH</h2></a>
             </div>
-            <div class="menu-ingredients">
+            <!-- <div class="menu-ingredients">
               Grilled chicken with provolone, artichoke hearts, and roasted red pesto
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="international.html"><h3>International services</h3></a>
+              <a href="international.html"><h2>International services</h2></a>
             </div>
-            <div class="menu-ingredients">
+            <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
-            </div>
+            </div> -->
           </div>
 
           <!-- <div class="col-lg-6 menu-item filter-salads">
@@ -892,7 +892,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Delicious</h3>
+      <h3>Rotaract Club of GITAM</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
