--- a/index.html
+++ b/index.html
@@ -335,26 +335,26 @@
 
         <div class="section-title">
           <h2>Check out our <span>Annual Fest</span></h2>
-          <h3>Ingenio</h3>
+          <h3>Ingenio 8.0</h3>
         </div>
 
         <div class="row">
           <div class="col-lg-3">
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item">
-                <a class="nav-link active show" data-toggle="tab" href="#tab-1">Modi sit est</a>
+                <a class="nav-link active show" data-toggle="tab" href="#tab-1">Description</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#tab-2">Unde praesentium sed</a>
+                <a class="nav-link" data-toggle="tab" href="#tab-2">Motive</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#tab-3">Pariatur explicabo vel</a>
+                <a class="nav-link" data-toggle="tab" href="#tab-3">Fun Activities</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#tab-4">Nostrum qui quasi</a>
+                <a class="nav-link" data-toggle="tab" href="#tab-4">Mock Interviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#tab-5">Iusto ut expedita aut</a>
+                <a class="nav-link" data-toggle="tab" href="#tab-5">Cultural Night</a>
               </li>
             </ul>
           </div>
@@ -363,9 +363,10 @@
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Architecto ut aperiam autem id</h3>
-                    <p class="font-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+                    <h3>Description</h3>
+                    <!-- <p class="font-italic"></p> -->
+                    <p>Ingenio 8.0 is a fundraising event for the welfare of various specially-abled schools in Visakhapatnam. This event consists of various activities which helps in the development of different aspects of the participants.</p>
+                    <p>The fundraising event of the of Ingenio 8.0 is named as “Hrudayankur”, means the seeds of the heart which needs to be nurtured.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-1.jpg" alt="" class="img-fluid">
@@ -375,9 +376,9 @@
               <div class="tab-pane" id="tab-2">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Et blanditiis nemo veritatis excepturi</h3>
-                    <p class="font-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
+                    <h3>Motive</h3>
+                    <!-- <p class="font-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p> -->
+                    <p>The main motive of “Ingenio” is to give a platform to Specially-abled children from different schools in Visakhapatnam to showcase their talents and to enlighten them with joy. The money raised by doing the event will be used to buy some essentials to the Children.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-2.jpg" alt="" class="img-fluid">
@@ -387,9 +388,10 @@
               <div class="tab-pane" id="tab-3">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Impedit facilis occaecati odio neque aperiam sit</h3>
-                    <p class="font-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
-                    <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
+                    <h3>Fun Activities</h3>
+                    <!-- <p class="font-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p> -->
+                    <p>Many fun filled, interactive activities are ready to improve the holistic development of the students. These activities are conducted using various online platforms like WhatsApp, Zoom online meetings, etc..   By participating in these activities, students can get relief form their stress.
+                    </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-3.jpg" alt="" class="img-fluid">
@@ -399,9 +401,16 @@
               <div class="tab-pane" id="tab-4">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Fuga dolores inventore laboriosam ut est accusamus laboriosam dolore</h3>
-                    <p class="font-italic">Totam aperiam accusamus. Repellat consequuntur iure voluptas iure porro quis delectus</p>
-                    <p>Eaque consequuntur consequuntur libero expedita in voluptas. Nostrum ipsam necessitatibus aliquam fugiat debitis quis velit. Eum ex maxime error in consequatur corporis atque. Eligendi asperiores sed qui veritatis aperiam quia a laborum inventore</p>
+                    <h3>Mock Interviews</h3>
+                    <!-- <p class="font-italic">Totam aperiam accusamus. Repellat consequuntur iure voluptas iure porro quis delectus</p> -->
+                    <p>The prime focus of Ingenio 8.0 is Mock Interviews. Interviews are never a cake walk, one must need a prior practice before attending an interview. Since these are mock interviews no one will be discarded at any round. These mock interviews are done in  4 rounds:
+                    <ol>
+                      <li>Aptitude exam</li>
+                      <li>Group Discussion</li>
+                      <li>Technical Round</li>
+                      <li>HR Round</li>
+                    </ol>
+                    </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-4.jpg" alt="" class="img-fluid">
@@ -411,9 +420,10 @@
               <div class="tab-pane" id="tab-5">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Est eveniet ipsam sindera pad rone matrelat sando reda</h3>
-                    <p class="font-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                    <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
+                    <h3>Cultural Night</h3>
+                    <!-- <p class="font-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p> -->
+                    <p>The cultural night of Rotaract Club of GITAM holds its specialty by giving the platform to specially abled children from different schools in Vizag. This super talented children will show their power packed performances through Zoom online meetings. A part from that, We have performances of our own Rotaractors. 
+                    </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
