Added Ingenio photos

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <p>The fundraising event of the of Ingenio 8.0 is named as “Hrudayankur”, means the seeds of the heart which needs to be nurtured.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-1.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/Ingenio/Ingenio7.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -381,7 +381,7 @@
                     <p>The main motive of “Ingenio” is to give a platform to Specially-abled children from different schools in Visakhapatnam to showcase their talents and to enlighten them with joy. The money raised by doing the event will be used to buy some essentials to the Children.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-2.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/Ingenio/poster.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -394,7 +394,7 @@
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-3.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/Ingenio/Fun activities.jpeg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -413,7 +413,7 @@
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-4.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/Ingenio/HR.jpeg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -426,7 +426,7 @@
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/Ingenio/culturalnight.jpeg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
