changed content and added social media links

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Why choose <span>Our Restaurant</span></h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <h2>Why should I <span>Join Rotaract?</span></h2>
+          <!-- <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p> -->
         </div>
 
         <div class="row">
@@ -196,24 +196,24 @@
           <div class="col-lg-4">
             <div class="box">
               <span>01</span>
-              <h4>Lorem Ipsum</h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4>Service</h4>
+              <p>You can volunteer locally and internationally in different schools and organizations.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box">
               <span>02</span>
-              <h4>Repellat Nihil</h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <h4>Professional Development</h4>
+              <p>You can be a part of various activities that can develop your leadership qualities and communication skills</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box">
               <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4>Expand your network</h4>
+              <p>Build career contacts and meet <br>like-minded people from India and around the world</p>
             </div>
           </div>
 
@@ -889,13 +889,13 @@
   <footer id="footer">
     <div class="container">
       <h3>Rotaract Club of GITAM</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Rotaract Club of GITAM is a university based, service oriented club in GITAM university</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+        <a href="https://www.facebook.com/rotaractgitam" class="facebook" target="blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/rotaractclubofgitam/" class="instagram" target="blank"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.youtube.com/user/rcgu2010" class="youtube" target="blank"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.linkedin.com/company/rotaract-club-of-gitam" class="linkedin" target="blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Delicious</span></strong>. All Rights Reserved
