Changed font, icons and contact details at the top

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,8 +42,8 @@
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-transparent">
     <div class="container text-right">
-      <i class="icofont-phone"></i> +1 5589 55488 55
-      <i class="icofont-clock-time icofont-rotate-180"></i> Mon-Sat: 11:00 AM - 23:00 PM
+      <i class="icofont-phone"></i> +91 9182684010
+      <i class="icofont-email"></i> gitamrotaractevents@gmail.com
     </div>
   </section>
 
@@ -50,7 +52,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h3 class="text-light"><a href="index.html"><span>Rotaract Club of GITAM</span></a></h3>
+        <h4 class="text-light"><a href="index.html"><span>Rotaract Club of GITAM</span></a></h4>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -62,7 +64,7 @@
           <li><a href="#avenues">Avenues</a></li>
           <li><a href="#ingenio">Ingenio</a></li>
           <li><a href="#events">Events</a></li>
-          <li><a href="#chefs">Chefs</a></li>
+          <li><a href="#testimonials">Alumni</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact</a></li>
 
@@ -245,7 +247,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="community.html"><h2>Community services</h2></a>
+              <a href="community.html"><h4>Community services</h4></a>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -254,7 +256,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="professional.html"><h2>Professional services</h2></a>
+              <a href="professional.html"><h4>Professional services</h4></a>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -263,7 +265,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="clubservices.html"><h2>Club services</h2></a>
+              <a href="clubservices.html"><h4>Club services</h4></a>
             </div>
             <!-- <div class="menu-ingredients">
               A delicate crab cake served on a toasted roll with lettuce and tartar sauce
@@ -272,7 +274,7 @@
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="youth.html"><h2>Youth services/ New Generation</h2></a>
+              <a href="youth.html"><h4>Youth services/ New Generation</h4></a>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -281,7 +283,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="teach.html"><h2>Rotary TEACH</h2></a>
+              <a href="teach.html"><h4>Rotary TEACH</h4></a>
             </div>
             <!-- <div class="menu-ingredients">
               Grilled chicken with provolone, artichoke hearts, and roasted red pesto
@@ -290,7 +292,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="international.html"><h2>International services</h2></a>
+              <a href="international.html"><h4>International services</h4></a>
             </div>
             <!-- <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -662,10 +664,10 @@
 <section id="chefs" class="chefs">
   <div class="container">
 
-    <div class="section-title">
+    <!-- <div class="section-title">
       <h2>Our Proffesional <span>Chefs</span></h2>
       <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
-    </div>
+    </div> -->
 
     <div class="row">
 
@@ -842,13 +844,13 @@
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="icofont-envelope"></i>
               <h4>Email:</h4>
-              <p>info@example.com<br>contact@example.com</p>
+              <p>gitamrotaractevents@gmail.com</p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="icofont-phone"></i>
               <h4>Call:</h4>
-              <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+              <p>+91 9182654010</p>
             </div>
           </div>
         </div>
