Changed footer and added profiles

--- a/clubservices.html
+++ b/clubservices.html
@@ -185,8 +185,8 @@ Over 60 students participated in the game, and everyone spent quality time toget
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Delicious</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>Rotaract Club of GITAM</h3>
+      <p>Rotaract Club of GITAM is a university based, service oriented club in GITAM university</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
