--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-transparent">
     <div class="container text-right">
       <i class="icofont-phone"></i> +91 9182684010
-      <i class="icofont-email"></i> gitamrotaractevents@gmail.com
+      <i class="icofont-email"></i> gitamrotaract@gmail.com
     </div>
   </section>
 
@@ -680,10 +680,10 @@
             <h4>Gopala krishna Chimata</h4>
             <span>President</span>
             <div class="social">
-              <a href=""><i class="icofont-twitter"></i></a>
-              <a href=""><i class="icofont-facebook"></i></a>
-              <a href=""><i class="icofont-instagram"></i></a>
-              <a href=""><i class="icofont-linkedin"></i></a>
+              <!-- <a href=""><i class="icofont-twitter"></i></a> -->
+              <a href="https://www.facebook.com/gopalakrishna.chimata.7" target="blank"><i class="icofont-facebook"></i></a>
+              <a href="https://www.instagram.com/gopalakrishnachimata" target="blank"><i class="icofont-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/gopalakrishna-chimata-6895b8181/" target="blank"><i class="icofont-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -695,12 +695,12 @@
           <div class="member-info" id="desc" style="margin-left: 78px;width: 348px;">
             <h4>N.V.L.Murali Krishna</h4>
             <span>Faculty Advisor</span>
-            <div class="social">
+            <!-- <div class="social">
               <a href=""><i class="icofont-twitter"></i></a>
               <a href=""><i class="icofont-facebook"></i></a>
               <a href=""><i class="icofont-instagram"></i></a>
               <a href=""><i class="icofont-linkedin"></i></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -844,7 +844,7 @@
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="icofont-envelope"></i>
               <h4>Email:</h4>
-              <p>gitamrotaractevents@gmail.com</p>
+              <p>gitamrotaract@gmail.com</p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
