--- a/professional.html
+++ b/professional.html
@@ -331,8 +331,8 @@ K.B. Kalpana ma'am.
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Delicious</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>Rotaract Club of GITAM</h3>
+      <p>Rotaract Club of GITAM is a university based, service oriented club in GITAM university</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
