Added photos of alumni and changed alumni section

--- a/index.html
+++ b/index.html
@@ -717,94 +717,231 @@
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
-            <div class="stars">
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
+            <div class="alumni">
+              <img src="assets/img/Alumni/P Sai Bhavana.jpeg" class="testimonial-img" alt="">
+              <h3>P Sai Bhavana<h3>
+              <h4>Cluster Manager, PhonePe</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
             </div>
-            <p>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Kavya.jpeg" class="testimonial-img" alt="">
+              <h3>Kavya Tirumalaraju</h3>
+              <h4></h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div> 
+            </div>
+            <!-- <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
+            </p> -->
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
-            <div class="stars">
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Aishwarya Chitta.jpeg" class="testimonial-img" alt="">
+              <h3>Aishwarya Chitta<h3>
+              <h4>Data Science and Analytics professional, Truist Inc.,</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
             </div>
-            <p>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Chaitanya Dadhichi.jpeg" class="testimonial-img" alt="">
+              <h3>Chaitanya Dadichi<h3>
+              <h4>Business Consultant, ZS Associates</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
+            </div>
+            <!-- <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+              She completed her undergrad in Electronics and Instrumentation Engineering and went to do her masters in Information Systems from Georgia State University. Outside of work, she is a food blogger with focus on desserts, mixology and food photography. She also runs the instagram handle misswhiskalot. She also volunteers at an organization that collects and donates food to food banks.  
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
+            </p> -->
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
-            <div class="stars">
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Devaraj.jpeg" class="testimonial-img" alt="">
+              <h3>Devraj Sakhalabhaktula</h3>
+              <h4>Technical Lead - Enterprise Monitoring, Cotiviti</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
             </div>
-            <p>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Nitin Chinta.jpeg" class="testimonial-img" alt="">
+              <h3>Nitin Chinta</h3>
+              <h4>Regional Manager, Andhra & Telangana</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
+            </div>
+            
+            <!-- <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+              He completed her undergrad in Electronics and Communication Engineering. He helps organisations in tracking and reporting business critical problems in IT Infrastructure which can result into revenue loss for an organisation. He is part of centre among excellence team at wissen infotech and have worked with companies like hcl technologies, Hsbc software development and Cotiviti.
+              he also volunteers with NGO Adileela Foundation in improving school infrastructure of 250 government schools in Srikakulam district.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
+            </p> -->
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
-            <div class="stars">
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Deepanjan Joshi.jpeg" class="testimonial-img" alt="">
+              <h3>Dr. Deepanjan Ghosh</h3>
+              <h4>Co-Founder, G2B Biologists PVT LTD</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
             </div>
-            <p>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Kishen Jayanti.jpeg" class="testimonial-img" alt="">
+              <h3>Kishen Jayanti</h3>
+              <h4>Senior Manager in Marketing Analytics, The Home Depot.</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
+            </div>
+            <!-- <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
+            </p> -->
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
-            <div class="stars">
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
-              <i class="icofont-star"></i>
+            <div class="alumni">
+              <img src="assets/img/alumni/Anirudh.jpeg" class="testimonial-img" alt="">
+              <h3>Anirudh</h3>
+              <h4>Transport Engineer, GHD</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
             </div>
-            <p>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Vidya Attivali.jpeg" class="testimonial-img" alt="">
+              <h3>Vidya Attivali</h3>
+              <h4>Senior Developer, Target</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
+            </div>
+            <!-- <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
+            </p> -->
           </div>
+
+          <div class="testimonial-item">
+            <div class="alumni">
+              <img src="assets/img/alumni/Deeksha.jpeg" class="testimonial-img" alt="">
+              <h3>Deeksha</h3>
+              <h4>Project Manager, Discover Financial Services</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
+            </div>
+            <div class="alumni">
+              <img src="assets/img/Alumni/Avinash.jpeg" class="testimonial-img" alt="">
+              <h3>Avinash Gidugu</h3>
+              <h4>Advisory Consultant, Deloitte</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
+            </div>
+            <!-- <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p> -->
+          </div>
+
+          <div class="testimonial-item">
+            <div class="alumni">
+              <img src="assets/img/alumni/Deepti Dama.jpeg" class="testimonial-img" alt="">
+              <h3>Deepti Dama</h3>
+              <h4>PhD Neuroscience, National Brain Research Centre</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
+            </div>
+            <!-- <div class="alumni">
+              <img src="assets/img/Alumni/Avinash.jpeg" class="testimonial-img" alt="">
+              <h3>Avinash Gidugu</h3>
+              <h4>Advisory Consultant, Deloitte</h4>
+              <div class="stars">
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+                <i class="icofont-star"></i>
+              </div>
+            </div> -->
+            <!-- <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p> -->
+          </div>
+
 
         </div>
 
