--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           <li><a href="#testimonials">Alumni</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact</a></li>
-
-          <li class="book-a-table text-center"><a href="#book-a-table">Join Rotaract</a></li>
+          <!-- <li class="book-a-table text-center"><a href="#book-a-table">Join Rotaract</a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
+      <img src="assets/img/gitam-logo.png" alt="GITAM" class="gitamlogo">
 
     </div>
   </header><!-- End Header -->
@@ -88,11 +88,11 @@
           <div class="carousel-item active" style="background: url(assets/img/slide/groupphoto.png);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown"><span>Delicious</span> Restaurant</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animate__animated animate__fadeInDown">Rotaract Club of <span>GITAM</span></h2>
+                <!-- <p class="animate__animated animate__fadeInUp">Rotaract Club of GITAM is a youth and student centric organization comprising of students from GITAM Deemed to be University</p> -->
                 <div>
-                  <a href="#avenues" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
+                  <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
+                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -102,11 +102,11 @@
           <div class="carousel-item" style="background: url(assets/img/slide/Abhyaas.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animate__animated animate__fadeInDown">Join Rotaract - <span>Be the Change</span></h2>
+                <!-- <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p> -->
                 <div>
-                  <a href="#avenues" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
+                  <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
+                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -117,11 +117,11 @@
             <!-- <div class="carousel-background"><img src="assets/img/slide/flashmob.jpg" alt=""></div> -->
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animate__animated animate__fadeInDown">Fellowship through <span>Service</span></h2>
+                <!-- <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p> -->
                 <div>
-                  <a href="#avenues" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
+                  <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
+                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -530,7 +530,7 @@
     </section><!-- End Events Section -->
 
     <!-- ======= Book A Table Section ======= -->
-    <section id="book-a-table" class="book-a-table">
+    <!-- <section id="book-a-table" class="book-a-table">
       <div class="container">
 
         <div class="section-title">
@@ -578,7 +578,8 @@
         </form>
 
       </div>
-    </section><!-- End Book A Table Section -->
+    </section> -->
+    <!-- End Book A Table Section -->
 
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
@@ -692,7 +693,7 @@
       <div class=" col-md-6">
         <div class="member" id="pic">
           <div class="pic"><img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt="" style="width: 377px;height: 450px;"></div>
-          <div class="member-info" id="desc" style="margin-left: 78px;width: 348px;">
+          <div class="member-info" id="desc" style="height: 138px;">
             <h4>N.V.L.Murali Krishna</h4>
             <span>Faculty Advisor</span>
             <!-- <div class="social">
@@ -954,29 +955,29 @@
 
         <div class="section-title">
           <h2><span>Contact</span> Us</h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <!-- <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p> -->
         </div>
       </div>
 
-      <div class="map">
+      <!-- <div class="map">
         <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-      </div>
+      </div> -->
 
       <div class="container mt-5">
 
         <div class="info-wrap">
           <div class="row">
-            <div class="col-lg-3 col-md-6 info">
+            <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="icofont-google-map"></i>
               <h4>Location:</h4>
-              <p>A108 Adam Street<br>New York, NY 535022</p>
+              <p>GITAM University<br>Vizag</p>
             </div>
 
-            <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
+            <!-- <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="icofont-clock-time icofont-rotate-90"></i>
               <h4>Open Hours:</h4>
               <p>Monday-Saturday:<br>11:00 AM - 2300 PM</p>
-            </div>
+            </div> -->
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="icofont-envelope"></i>
