some minor changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h4 class="text-light"><a href="index.html"><span>Rotaract Club of GITAM</span></a></h4>
+        <h4 class="text-light"><a href="index.html"><span>RACG</span></a></h4>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -85,7 +85,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background: url(assets/img/slide/groupphoto.png);">
+          <div class="carousel-item active" style="background: url(assets/img/slide/abhyas.jpeg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Rotaract Club of <span>GITAM</span></h2>
@@ -712,6 +712,7 @@
 </section><!-- End Chefs Section -->
 
     <!-- ======= Testimonials Section ======= -->
+    <h3 class="alumni-head">Our Proud <span>Alumni</span></h3>
     <section id="testimonials" class="testimonials">
       <div class="container">
 
@@ -730,7 +731,7 @@
                 <i class="icofont-star"></i>
               </div>
             </div>
-            <div class="alumni">
+            <div class="alumni d-none d-md-block">
               <img src="assets/img/Alumni/Kavya.jpeg" class="testimonial-img" alt="">
               <h3>Kavya Tirumalaraju</h3>
               <h4></h4>
@@ -762,7 +763,7 @@
                 <i class="icofont-star"></i>
               </div>
             </div>
-            <div class="alumni">
+            <div class="alumni d-none d-md-block">
               <img src="assets/img/Alumni/Chaitanya Dadhichi.jpeg" class="testimonial-img" alt="">
               <h3>Chaitanya Dadichi<h3>
               <h4>Business Consultant, ZS Associates</h4>
@@ -794,7 +795,7 @@
                 <i class="icofont-star"></i>
               </div>
             </div>
-            <div class="alumni">
+            <div class="alumni d-none d-md-block">
               <img src="assets/img/Alumni/Nitin Chinta.jpeg" class="testimonial-img" alt="">
               <h3>Nitin Chinta</h3>
               <h4>Regional Manager, Andhra & Telangana</h4>
@@ -828,7 +829,7 @@
                 <i class="icofont-star"></i>
               </div>
             </div>
-            <div class="alumni">
+            <div class="alumni d-none d-md-block">
               <img src="assets/img/Alumni/Kishen Jayanti.jpeg" class="testimonial-img" alt="">
               <h3>Kishen Jayanti</h3>
               <h4>Senior Manager in Marketing Analytics, The Home Depot.</h4>
@@ -860,7 +861,7 @@
                 <i class="icofont-star"></i>
               </div>
             </div>
-            <div class="alumni">
+            <div class="alumni d-none d-md-block">
               <img src="assets/img/Alumni/Vidya Attivali.jpeg" class="testimonial-img" alt="">
               <h3>Vidya Attivali</h3>
               <h4>Senior Developer, Target</h4>
@@ -892,7 +893,7 @@
                 <i class="icofont-star"></i>
               </div>
             </div>
-            <div class="alumni">
+            <div class="alumni d-none d-md-block">
               <img src="assets/img/Alumni/Avinash.jpeg" class="testimonial-img" alt="">
               <h3>Avinash Gidugu</h3>
               <h4>Advisory Consultant, Deloitte</h4>
@@ -915,7 +916,7 @@
             <div class="alumni">
               <img src="assets/img/alumni/Deepti Dama.jpeg" class="testimonial-img" alt="">
               <h3>Deepti Dama</h3>
-              <h4>PhD Neuroscience, National Brain Research Centre</h4>
+              <h4>Trainee, Dr. Reddy's Laboratory</h4>
               <div class="stars">
                 <i class="icofont-star"></i>
                 <i class="icofont-star"></i>
